# C_Data_Structures

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/NDS/: general.h  list.h  lnode.h  slist.h  types.h
linked_list/: linkedlist_t.c  linkedlist_t.h
slist/: slist.h
src/NDS/: CMakeLists.txt  list.c  lnode.c
test/: CMakeLists.txt  list_test.c  lnode_test.c  main.c
tst/: CMakeLists.txt
